--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');
 /* FORMULARIO DE INICIO */
 .mainBackground {
-    background-image: url(/jpg/mainBackground.jpg);
+    background-image: url(../jpg/mainBackground.jpg);
     background-size: cover;
 }
 
